k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  namespace: develop
spec:
  selector:
    matchLabels:
      app: app-1
  replicas: 4
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1
        image: "alex45879/httpd_php"
        imagePullPolicy: "Always"
        resources:
         requests:
          memory: "128Mi"
          cpu: "300m"
         limits:
          memory: "256Mi"
          cpu: "700m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-1
  namespace: develop
  labels:
    app: app-1
spec:
  type: ClusterIP
  selector:
    app: app-1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: develop
  annotations:
       kubernetes.io/ingress.class: "nginx"
#      ingress.kubernetes.io/rewrite-target: /
#      spec.ingressClassName: nginx
spec:
  rules:
    - host: www.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-1
                port:
                  number: 80
